# src/main/java/ru/singularity/evaluation360/controller/TestController.java
@@ -17,8 +17,7 @@ import org.springframework.web.bind.annotation.*;
 import ru.singularity.evaluation360.dto.test.*;
 import ru.singularity.evaluation360.entity.SkillEntity;
 import ru.singularity.evaluation360.repository.UserRepository;
-import ru.singularity.evaluation360.service.AuthService;
-import ru.singularity.evaluation360.service.TestService;
+import ru.singularity.evaluation360.service.*;
 
 import java.util.Arrays;
 import java.util.List;
@@ -28,9 +27,10 @@ import java.util.List;
 @RequestMapping("test")
 @RequiredArgsConstructor
 public class TestController {
-
-    private final TestService testService;
     private final AuthService authService;
+
+    private final TestManagementService testManagementService;
+    private final EvaluationService evaluationService;
 
     /**
      * Получить все тесты.
@@ -46,7 +46,7 @@ public class TestController {
         int userId = authService.findUserByEmail(SecurityContextHolder.getContext().getAuthentication().getName())
                 .getId();
 
-        return ResponseEntity.ok(testService.getAllTests(userId));
+        return ResponseEntity.ok(testManagementService.getAllTests(userId));
     }
 
     /**
@@ -68,7 +68,7 @@ public class TestController {
                         getContext().
                         getAuthentication().
                         getName()).getId();
-        return ResponseEntity.ok(testService.getTestMenu(test_id, userId));
+        return ResponseEntity.ok(evaluationService.getTestMenu(test_id, userId));
     }
 
     /**
@@ -89,45 +89,7 @@ public class TestController {
         String name = SecurityContextHolder.getContext().getAuthentication().getName();
         int userId = authService.findUserByEmail(name).getId();
 
-        return ResponseEntity.ok(testService.getTest(test_id, userId, evaluatedId));
-    }
-
-    /**
-     * Получить информацию о тесте для админа.
-     *
-     * @param test_id Идентификатор теста.
-     * @return Детали теста.
-     */
-    @Operation(summary = "Получить тест", description = "Возвращает тест.")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Успешное получение теста")
-    })
-    @GetMapping("admin/{test_id}")
-    @PreAuthorize("@testAuthFilter.hasAdminAccess(authentication.principal.role)")
-    public ResponseEntity<TestViewResponseDTO> getTestAdmin(@PathVariable String test_id) {
-        return ResponseEntity.ok(testService.getTest(test_id));
-    }
-
-    /**
-     *
-     * Изменение статуса.
-     *
-     * @param testStatusRequestDTO модель для изменения комментария
-     */
-    @PutMapping("status/{test_id}")
-    @Operation(summary = "изменить статус", description = "меняет статус")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "Успешное получение теста")
-    })
-    @PreAuthorize("@testAuthFilter.hasAdminAccess(authentication.principal.role)")
-    public ResponseEntity<HttpStatus> updateTestStatus(@PathVariable String test_id,@RequestBody TestStatusRequestDTO testStatusRequestDTO){
-        try {
-            testService.editTestStatus(test_id, testStatusRequestDTO);
-            return ResponseEntity.ok(HttpStatus.CREATED);
-        }catch (Exception e){
-            log.error(Arrays.toString(e.getStackTrace()));
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(HttpStatus.BAD_REQUEST);
-        }
+        return ResponseEntity.ok(testManagementService.getTest(test_id, userId, evaluatedId));
     }
 
     /**
@@ -143,51 +105,11 @@ public class TestController {
     @PreAuthorize("@testAuthFilter.hasAdminAccess(authentication.principal.role)")
     public ResponseEntity<HttpStatus> postTest(@RequestBody TestRequestDTO testRequestDTO){
         try {
-            testService.addTest(testRequestDTO);
+            testManagementService.addTest(testRequestDTO);
             return ResponseEntity.ok(HttpStatus.CREATED);
         }catch (Exception e){
             log.error(Arrays.toString(e.getStackTrace()));
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(HttpStatus.BAD_REQUEST);
         }
-    }
-
-    /**
-     *
-     * Получить список вопросов
-     */
-
-    @Operation(summary = "получить все вопросы", description = "получить вопросы")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "получение шаблонов вопросов")
-    })
-    @GetMapping("questions")
-    @PreAuthorize("@testAuthFilter.hasAdminAccess(authentication.principal.role)")
-    public ResponseEntity<QuestionsResponseDTO> getQuestions() {
-        return ResponseEntity.ok(testService.getAllQuestions());
-    }
-
-    /**
-     * Добавление навыка
-     */
-    @PostMapping("skill")
-    @PreAuthorize("@testAuthFilter.hasAdminAccess(authentication.principal.role)")
-    public ResponseEntity<SkillEntity> addSkill(@RequestBody SkillRequestDTO skillRequestDTO){
-        return ResponseEntity.ok(testService.addSkill(skillRequestDTO));
-    }
-
-    /**
-     * Добавление навыков
-     */
-    @PostMapping("skills")
-    public ResponseEntity<List<SkillEntity>> addSkills(@RequestBody List<SkillRequestDTO> skillRequestDTOS){
-        return ResponseEntity.ok(testService.addSkills(skillRequestDTOS));
-    }
-    /**
-     * Получить навыки
-     */
-    @GetMapping("skills")
-    @PreAuthorize("@testAuthFilter.hasAdminAccess(authentication.principal.role)")
-    public ResponseEntity<List<SkillEntity>> getSkills() {
-        return ResponseEntity.ok(testService.getSkills());
     }
 }
